--- a/first-file.adoc
+++ b/first-file.adoc
@@ -6,3 +6,13 @@
 This is the first paragraph in my test document.
 
 toc::[]
+
+== My first section
+Some content for my first section.  Pretty basic stuff.
+
+== My second section
+More content, but it's way more advanced.
+=== Subsection uno
+See way more advanced
+=== Subsection dos
+Not even on the same level
